--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>NFC Bingo</title>
+        <title>NFC Bingo: Contest Edition</title>
         <link rel="icon" type="image/png" href="img/NFC_Bingo_icon.png"/>
         <link rel="stylesheet" href="style/style.css"/>
         <link id="styleTheme" rel="stylesheet" href="style/nwero.css"/>
@@ -12,7 +12,7 @@
         <meta name="author" content="TheTastyPi" />
     </head>
     <body onresize="displayBoard()">
-        <h1>NFC Bingo</h1>
+        <h1>NFC Bingo: Contest Edition</h1>
         <div id="bingoBoard"></div>
         <button class="utilBtn" onclick="clearBoard()">Clear</button>
         <button class="utilBtn" onclick="regenerateBoard()">Regenerate</button>
